# ray_tracer_challenge

./: .gitignore  CMakeLists.txt
Chapters/: CMakeLists.txt
Chapters/Chapter1/: CMakeLists.txt  Chapter1_main.cpp
Chapters/Chapter10/: CMakeLists.txt  Chapter10_main.cpp
Chapters/Chapter2/: CMakeLists.txt  Chapter2_main.cpp
Chapters/Chapter4/: CMakeLists.txt  Chapter4_main.cpp
Chapters/Chapter5/: CMakeLists.txt  Chapter5_main.cpp
Chapters/Chapter6/: CMakeLists.txt  Chapter6_main.cpp
Chapters/Chapter7/: CMakeLists.txt  Chapter7_main.cpp
Chapters/Chapter8/: CMakeLists.txt  Chapter8_main.cpp
Chapters/Chapter9/: CMakeLists.txt  Chapter9_main.cpp
Chapters/shared/: env.hpp  projectile.hpp
cmake/: CXXFeatures.cmake  RTC-config.cmake.in  RTC.cmake  RTCDownloadExternal.cmake  RTCFolders.cmake  RTCWindows.cmake
extra/: Intersection of a ray and a cone _ Light is beautiful.html  Ray tracing a torus.html
extra/Intersection of a ray and a cone _ Light is beautiful_files/: MtcXWr.html  effect.js.הורדה  pgEmbed.js.הורדה
extra/Ray tracing a torus_files/: api.js.הורדה  config.js.הורדה  css  embed.js.הורדה  get  get(1)  get(2)  get(3)  get(4)  iframe.html  lounge.bundle.e036f421f8b1b0c7a5e3f86da59ffb99.js.הורדה  lounge.d70637fa1c39d358d2553bf476f09a98.css  lounge.load.78e08407d82efb4f9f75ebdfdb5d6d15.js.הורדה  pixel.html  saved_resource(1).html  saved_resource.html  sdk.js(1).הורדה  sdk.js.הורדה  sync.html
src/rtc/: Camera.cpp  Camera.hpp  Canvas.hpp  Scene.cpp  Scene.hpp  main.cpp
src/rtc/core/: collision_data.cpp  collision_data.hpp  material.h  ray.hpp  setup_glm.hpp  shape.hpp  sphere.hpp
src/rtc/core/lighting/: light.hpp  point_light.hpp
src/rtc/shapes/: cone.hpp  cube.hpp  cylinder.hpp  disk.hpp  plane.hpp  shape.hpp  sphere.hpp
tests/: CMakeLists.txt  Tests.cpp
